--- a/TeamSauce/Views/Home/Index.cshtml
+++ b/TeamSauce/Views/Home/Index.cshtml
@@ -6,19 +6,32 @@
 <html>
     <head>
         <title>Team Sauce</title>
-        <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+        <link href="@Url.Content("/Content/bootstrap.min.css")" rel="stylesheet" />
+        <link href="@Url.Content("/Content/site.css")" rel="stylesheet" />
+        <script src="@Url.Content("~/Scripts/jquery-1.9.1.min.js")"></script>
+        <script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
     </head>
     <body>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-8">.col-xs-12 .col-sm-6 .col-md-8</div>
-          <div class="col-xs-6 col-sm-6 col-md-4">.col-xs-6 .col-sm-6 .col-md-4</div>
+        <div class="row-fluid">
+            <div class="col-xs-12 col-sm-6 col-md-8">
+                @{ Html.RenderPartial("_Graphs"); }
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-4">
+                @{ Html.RenderPartial("_HackInformation"); }
+            </div>
         </div>
-        <div class="row">
-          <div class="col-xs-6 col-sm-4 col-md-4">.col-xs-6 .col-sm-4 .col-md-4</div>
-          <div class="col-xs-6 col-sm-4 col-md-4">.col-xs-6 .col-sm-4 .col-md-4</div>
-          <!-- Optional: clear the XS cols if their content doesn't match in height -->
+        <div class="row-fluid">
+            <div class="col-xs-6 col-sm-4 col-md-4">
+                @{ Html.RenderPartial("_TeamChat"); }
+            </div>
+            <div class="col-xs-6 col-sm-4 col-md-4">
+                @{ Html.RenderPartial("_Activity"); }
+            </div>
+          
           <div class="clearfix visible-xs"></div>
-          <div class="col-xs-6 col-sm-4 col-md-4">.col-xs-6 .col-sm-4 .col-md-4</div>
+            <div class="col-xs-6 col-sm-4 col-md-4">
+                @{ Html.RenderPartial("_SponsorChat"); }
+            </div>
         </div>
     </body>
 </html>
