--- a/TeamSauce/Views/Home/Chat.cshtml
+++ b/TeamSauce/Views/Home/Chat.cshtml
@@ -4,17 +4,24 @@
     ViewBag.Title = "Chat";
 }
 
+
+<ul class="chatbox"></ul>
+<div class="chat-message-wrapper">
+     <textarea class="chat-message atwho"></textarea>
+</div>
+
+
 <h2>Chat</h2>
 
 @using (Html.BeginForm()) {
     @Html.EditorForModel();
 
     <input id="send" value="send" type="button" />
-    
+
     <ul id="messages" style="list-style:none;">
-        
+
     </ul>
-}   
+}
 
 <script src="@Url.Content("~/Scripts/jquery-1.9.1.js")"></script>
 <script src="@Url.Content("~/Scripts/jquery.signalR-2.0.0.js")"></script>
