--- a/TeamSauce/Views/Home/_TeamChat.cshtml
+++ b/TeamSauce/Views/Home/_TeamChat.cshtml
@@ -1,3 +1,8 @@
 ﻿@model dynamic
 
 TeamChat
+
+<ul class="chatbox"></ul>
+<div class="chat-message-wrapper">
+     <textarea class="chat-message atwho"></textarea>
+</div>
