Chat uses a submit button for sending instead of ENTER keypress

--- a/TeamSauce/Views/Home/_TeamChat.cshtml
+++ b/TeamSauce/Views/Home/_TeamChat.cshtml
@@ -5,4 +5,5 @@ TeamChat
 <ul class="chatbox"></ul>
 <div class="chat-message-wrapper">
      <textarea class="chat-message atwho"></textarea>
+     <input type="submit" id="chat-submit" name="chat-submit" value="Send" />
 </div>
