Chat includes the ChatR javascript file

--- a/TeamSauce/Views/Home/_TeamChat.cshtml
+++ b/TeamSauce/Views/Home/_TeamChat.cshtml
@@ -7,3 +7,5 @@ TeamChat
      <textarea class="chat-message atwho"></textarea>
      <input type="submit" id="chat-submit" name="chat-submit" value="Send" />
 </div>
+
+<script src="@Url.Content("~/Scripts/ChatR.js")"></script>
