--- a/TeamSauce/Views/Home/_TeamChat.cshtml
+++ b/TeamSauce/Views/Home/_TeamChat.cshtml
@@ -9,3 +9,4 @@ TeamChat
 </div>
 
 <script src="@Url.Content("~/Scripts/ChatR.js")"></script>
+<script src="@Url.Content("~/Scripts/moment.min.js")"></script>
