--- a/TeamSauce/Views/Home/_Questionnaire.cshtml
+++ b/TeamSauce/Views/Home/_Questionnaire.cshtml
@@ -13,15 +13,8 @@
                     <span class="glyphicon glyphicon-record"></span>
                     <span>{{question.text}}</span>    
                                         
-                    <div ng-controller="RatingCtrl" class="well well-small">
-                        <div ng-init="x = 0">
-                            <rating value="x" max="10" state-on="'icon-ok-sign'" state-off="'icon-ok-circle'"></rating> 
-                            <b>({{x}} of 10)</b>
-                        </div>
-                    </div>   
-                                         
+                    <angular-ratings ng-model="user_rating" notify-url="notify.json" notify-id="id" />     
                 </div>
-
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal" ng-submit="go">Go!</button>
@@ -29,34 +22,3 @@
         </div>
     </div>
 </div>
-
-<script type="text/javascript">
-    function QuestionnaireCtrl($scope) {
-        $scope.questions = [
-          { text: 'how hungry are you feeling?' },
-          { text: 'build an angular app' }];
-
-        $scope.go = function() {
-            alert('trop');
-        };
-    }
-    
-    var RatingCtrl = function ($scope) {
-        $scope.rate = 5;
-        $scope.max = 10;
-        $scope.isReadonly = false;
-
-        $scope.hoveringOver = function (value) {
-            $scope.overStar = value;
-            $scope.percent = 100 * (value / $scope.max);
-        };
-
-        $scope.ratingStates = [
-          { stateOn: 'icon-ok-sign', stateOff: 'icon-ok-circle' },
-          { stateOn: 'icon-star', stateOff: 'icon-star-empty' },
-          { stateOn: 'icon-heart', stateOff: 'icon-ban-circle' },
-          { stateOn: 'icon-heart' },
-          { stateOff: 'icon-off' }
-        ];
-    };
-</script>
