--- a/TeamSauce/Views/Home/_Graphs.cshtml
+++ b/TeamSauce/Views/Home/_Graphs.cshtml
@@ -1,5 +1,7 @@
 ﻿@model dynamic
 
-<div class="area">
-    I AM MOTHERFUCKER
+<div class="canvas-wrapper">
+     <canvas id="that-big-graph" width="900" height="400"></canvas>
 </div>
+
+<script src="@Url.Content("~/Scripts/GraphR.js")"></script>
