--- a/TeamSauce/Views/Home/Index.cshtml
+++ b/TeamSauce/Views/Home/Index.cshtml
@@ -41,7 +41,8 @@
         <script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
         <script src="@Url.Content("~/Scripts/angular.min.js")"></script>
         <script src="@Url.Content("~/Scripts/angular.ratings.js")"></script>
-        <script src="@Url.Content("~/Scripts/teamsauce.js")"></script>
         <script src="@Url.Content("~/Scripts/jquery.signalR-2.0.0.js")"></script>
+        <script src='/signalr/js'></script>
+        <script src="@Url.Content("~/Scripts/teamsauce.js")"></script>
     </body>
 </html>
