Adds graph js lib

--- a/TeamSauce/Views/Home/_Graphs.cshtml
+++ b/TeamSauce/Views/Home/_Graphs.cshtml
@@ -4,4 +4,5 @@
      <canvas id="that-big-graph" width="900" height="400"></canvas>
 </div>
 
+<script src="@Url.Content("~/Scripts/chart.min.js")"></script>
 <script src="@Url.Content("~/Scripts/GraphR.js")"></script>
