--- a/TeamSauce/Views/Home/_Questionnaire.cshtml
+++ b/TeamSauce/Views/Home/_Questionnaire.cshtml
@@ -12,9 +12,7 @@
                 <div class="question" ng-repeat="question in questions">
                     <span class="glyphicon glyphicon-record"></span>
                     <span>{{question.text}}</span>
-
-                    <angular-ratings ng-model="user_rating" notify-id="id" />
-
+                    <angular-ratings ng-model="user_rating" notify-url="notify.json" notify-id="id"/>
                 </div>
             </div>
             <div class="modal-footer">
@@ -22,32 +20,4 @@
             </div>
         </div>
     </div>
-</div>
-<script type="text/javascript">
-    function questionnaireCtrl($scope) {
-        var proxy = $.connection.questionnaireHub;
-
-        $.connection.hub.start();
-
-        $scope.questions = [
-            { text: 'how hungry are you feeling?' },
-            { text: 'build an angular app' }];
-
-        $scope.go = function () {
-            var questionnaireId = "4f231fec-afbf-421b-a6c8-8caceeb745ae";
-            
-            var questionnaireResponse = {
-                username: "Adam",
-                ratings: [{
-                    categorytype: "Hunger",
-                    value: 5
-                }, {
-                    categorytype: "Cats",
-                    value: 5
-                }]
-            };
-
-            proxy.server.complete(questionnaireId, JSON.stringify(questionnaireResponse));
-        };
-    }
-</script>
+</div>  
