--- a/TeamSauce/Views/Home/_SponsorChat.cshtml
+++ b/TeamSauce/Views/Home/_SponsorChat.cshtml
@@ -1,3 +1,10 @@
 ﻿@model dynamic
 
-SPONSOR CHAT
+<ul id="sponsor-feed">
+    
+</ul>
+
+<input type="text" id="sponsor-message"/>
+<button id="send-sponsor-message">Send</button>
+
+<script src="~/Scripts/SponsorChatR.js"></script>
