--- a/TeamSauce/Views/Home/_Graphs.cshtml
+++ b/TeamSauce/Views/Home/_Graphs.cshtml
@@ -4,5 +4,10 @@
      <canvas id="that-big-graph" width="900" height="400"></canvas>
 </div>
 
+<div>
+     <h3>Key</h3>
+     <ul class="graph-key"></ul>
+</div>
+
 <script src="@Url.Content("~/Scripts/chart.min.js")"></script>
 <script src="@Url.Content("~/Scripts/GraphR.js")"></script>
