--- a/TeamSauce/Views/Home/Index.cshtml
+++ b/TeamSauce/Views/Home/Index.cshtml
@@ -13,6 +13,15 @@
         <script src="@Url.Content("~/Scripts/jquery.signalR-2.0.0.js")"></script>
     </head>
     <body>
+        <div id="loginOverlay" style="background-color: #006400;">
+            <h2>Login</h2>
+
+            <input type="text" id="username"/>
+            <input type="password" id="password"/>
+
+            <input type="button" id="log-in"/>
+        </div>
+
         <div class="row-fluid">
             <div class="col-xs-12 col-sm-6 col-md-8">
                 @{ Html.RenderPartial("_Graphs"); }
@@ -29,7 +38,7 @@
                 @{ Html.RenderPartial("_Activity"); }
             </div>
 
-          <div class="clearfix visible-xs"></div>
+            <div class="clearfix visible-xs"></div>
             <div class="col-xs-6 col-sm-4 col-md-4">
                 @{ Html.RenderPartial("_SponsorChat"); }
             </div>
@@ -37,12 +46,70 @@
         
         @{ Html.RenderPartial("_Questionnaire"); }
         
+        
+
         <script src="@Url.Content("~/Scripts/jquery-1.9.1.min.js")"></script>
         <script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
         <script src="@Url.Content("~/Scripts/angular.min.js")"></script>
         <script src="@Url.Content("~/Scripts/angular.ratings.js")"></script>
         <script src="@Url.Content("~/Scripts/jquery.signalR-2.0.0.js")"></script>
-        <script src='/signalr/js'></script>
+        <script src="/signalr/js"></script>
+        
+        <script src="@Url.Content("~/Scripts/LoginR.js")"></script>
+        <script src="@Url.Content("~/Scripts/SponsorChatR.js")"></script>
         <script src="@Url.Content("~/Scripts/teamsauce.js")"></script>
+
+        <script type="text/javascript">
+            var proxy = $.connection.teamSauceHub;
+
+            var init_LoginR = function () {
+                $("#log-in").click(function () {
+                    var name = $('#username').val();
+                    var password = $('#password').val();
+                    proxy.server.logIn(name, password);
+                });
+            };
+
+            proxy.client.completed = function (connectionId) {
+                alert(connectionId);
+            };
+
+            proxy.client.loginFailed = function (connectionId) {
+                alert('Fail ' + connectionId);
+            };
+
+            var init_SponsorChatR = function () {
+
+                $("#send-sponsor-message").click(function () {
+                    var body = $('#sponsor-message').val();
+                    proxy.server.messageReceived(body);
+                });
+
+                proxy.server.getMessages().done(function (messages) {
+                    alert(messages);
+                });
+            };
+
+            proxy.client.userMessage = function (message) {
+                $('#sponsor-feed').append('<li>' +
+                                         '<span class="name">' + message.Sender + '</span>' +
+                                         '<span class="body">' + message.Message + '</span>' +
+                                         '<time>' + message.Time + '</time>' +
+                                         '</li>');
+            };
+
+            proxy.client.sponsorMessage = function (message) {
+                $('#sponsor-feed').append('<li>' +
+                                         '<span class="name">' + message.Sender + '</span>' +
+                                         '<span class="body">' + message.Message + '</span>' +
+                                         '<time>' + message.Time + '</time>' +
+                                         '</li>');
+            };
+
+            $.connection.hub.start().done(function() {
+                init_LoginR();
+                init_SponsorChatR();
+            });
+        </script>
     </body>
 </html>
