--- a/TeamSauce/Views/Home/_Graphs.cshtml
+++ b/TeamSauce/Views/Home/_Graphs.cshtml
@@ -1,12 +1,16 @@
 ﻿@model dynamic
 
-<div class="canvas-wrapper">
-     <canvas id="that-big-graph" width="900" height="400"></canvas>
+<div class="span10">
+  <div class="canvas-wrapper">
+    <canvas id="that-big-graph" width="900" height="400"></canvas>
+  </div>
 </div>
 
-<div>
-     <h3>Key</h3>
-     <ul class="graph-key"></ul>
+<div class="span2">
+  <div class="graph-key">
+    <h3>Key</h3>
+    <ul></ul>
+  </div>
 </div>
 
 <script src="@Url.Content("~/Scripts/chart.min.js")"></script>
