--- a/TeamSauce/Views/Home/Index.cshtml
+++ b/TeamSauce/Views/Home/Index.cshtml
@@ -13,24 +13,22 @@
         <script src="@Url.Content("~/Scripts/jquery.signalR-2.0.0.js")"></script>
     </head>
     <body>
-        <div class="row-fluid">
-            <div class="col-xs-12 col-sm-6 col-md-8">
+        <div class="row">
+            <div class="col-md-8">
                 @{ Html.RenderPartial("_Graphs"); }
             </div>
-            <div class="col-xs-6 col-sm-6 col-md-4">
+            <div class="col-md-4">
                 @{ Html.RenderPartial("_HackInformation"); }
             </div>
         </div>
-        <div class="row-fluid">
-            <div class="col-xs-6 col-sm-4 col-md-4">
+        <div class="row">
+            <div class="col-md-4">
                 @{ Html.RenderPartial("_TeamChat"); }
             </div>
-            <div class="col-xs-6 col-sm-4 col-md-4">
+            <div class="col-md-4">
                 @{ Html.RenderPartial("_Activity"); }
             </div>
-
-          <div class="clearfix visible-xs"></div>
-            <div class="col-xs-6 col-sm-4 col-md-4">
+            <div class="col-md-4">
                 @{ Html.RenderPartial("_SponsorChat"); }
             </div>
         </div>
