--- a/TeamSauce/Views/Home/Index.cshtml
+++ b/TeamSauce/Views/Home/Index.cshtml
@@ -45,8 +45,7 @@
         <script src='/signalr/js'></script>
         
         <script src="~/Scripts/ui-bootstrap-tpls-0.6.0.min.js"></script>
-        
-        
+        <script src="~/Scripts/jquery.raty.min.js"></script>
         <script src="@Url.Content("~/Scripts/teamsauce.js")"></script>
     </body>
 </html>
