--- a/TeamSauce/Views/Home/_TeamChat.cshtml
+++ b/TeamSauce/Views/Home/_TeamChat.cshtml
@@ -2,7 +2,7 @@
 
 <h2>TEAM</h2>
 
-<ul class="chatbox"></ul>
+<ul class="chatbox" style="overflow:scroll; max-height: 170px; overflow-x: hidden"></ul>
 <div class="chat-message-wrapper">
      <textarea class="chat-message atwho"></textarea>
 </div>
