Sponsor chat appears highlighted in the view.

--- a/TeamSauce/Views/Home/Index.cshtml
+++ b/TeamSauce/Views/Home/Index.cshtml
@@ -91,7 +91,7 @@
                 alert('Messages Returned' + messages + ':' + messages.length);
                 for (var idx = 0; idx < messages.length; idx++) {
                     if (messages[idx].MessageType == 'Sponsor') {
-                        $('#sponsor-feed').append('<li>' +
+                        $('#sponsor-feed').append('<li class="feed-sponsor">' +
                                          '<span class="name">' + messages[idx].Sender + '</span>' +
                                          '<span class="body">' + messages[idx].Message + '</span>' +
                                          '<time>' + messages[idx].Time + '</time>' +
@@ -116,7 +116,7 @@
             };
 
             proxy.client.sponsorMessage = function (message) {
-                $('#sponsor-feed').append('<li>' +
+                $('#sponsor-feed').append('<li class="feed-sponsor">' +
                     '<span class="name">' + message.Sender + '</span>' +
                     '<span class="body">' + message.Message + '</span>' +
                     '<time>' + message.Time + '</time>' +
