--- a/TeamSauce/Views/Home/_SponsorChat.cshtml
+++ b/TeamSauce/Views/Home/_SponsorChat.cshtml
@@ -2,11 +2,9 @@
 
 <h2>SPONSOR</h2>
 
-<ul id="sponsor-feed">
-    
-</ul>
-
-<input type="text" id="sponsor-message"/>
-<button id="send-sponsor-message">Send</button>
-
+<ul id="sponsor-feed" class="chatbox"></ul>
+<div class="chat-message-wrapper">
+     <textarea id="sponsor-message" class="chat-message atwho"></textarea>
+</div>
+<input type="submit" id="send-sponsor-message" value="Send" />
 <script src="~/Scripts/SponsorChatR.js"></script>
