--- a/TeamSauce/Views/Home/Index.cshtml
+++ b/TeamSauce/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <!DOCTYPE html>
-<html ng-app="teamsauce">
+<html>
     <head>
         <title>Team Sauce</title>
         <link href="@Url.Content("/Content/bootstrap.min.css")" rel="stylesheet" />
@@ -46,8 +46,6 @@
         
         <script src="@Url.Content("~/Scripts/jquery-1.9.1.min.js")"></script>
         <script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
-        <script src="@Url.Content("~/Scripts/angular.min.js")"></script>
-        <script src="@Url.Content("~/Scripts/angular.ratings.js")"></script>
         <script src="@Url.Content("~/Scripts/jquery.signalR-2.0.0.js")"></script>
         <script src='/signalr/js'></script>
         <script src="@Url.Content("~/Scripts/ui-bootstrap-tpls-0.6.0.min.js")"></script>
