made sponsor team chat window restrict

--- a/TeamSauce/Views/Home/_SponsorChat.cshtml
+++ b/TeamSauce/Views/Home/_SponsorChat.cshtml
@@ -2,7 +2,7 @@
 
 <h2>SPONSOR</h2>
 
-<ul id="sponsor-feed" class="chatbox"></ul>
+<ul id="sponsor-feed" class="chatbox" style="overflow:scroll; max-height: 170px; overflow-x: hidden"></ul>
 <div class="chat-message-wrapper">
      <textarea id="sponsor-message" class="chat-message atwho"></textarea>
 </div>
