--- a/TeamSauce/Views/Home/Index.cshtml
+++ b/TeamSauce/Views/Home/Index.cshtml
@@ -13,6 +13,33 @@
         <script src="@Url.Content("~/Scripts/jquery.signalR-2.0.0.js")"></script>
     </head>
     <body>
+        <div class="navbar navbar-inverse">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">TeamSauce</a>
+                </div>
+                <div class="navbar-collapse collapse navbar-responsive-collapse">
+                    <ul class="nav navbar-nav">
+                        
+                    </ul>
+                    <form class="navbar-form navbar-left">
+                        <input type="text" class="form-control col-lg-8" placeholder="Search">
+                    </form>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Log out</a></li>
+                       
+                    </ul>
+                </div><!-- /.nav-collapse -->
+            </div><!-- /.container -->
+        </div>
+        
+        
+
         <div class="container">
             <div id="loginOverlay" style="background-color: #006400;">
                 <h2>Login</h2>
@@ -95,10 +122,10 @@
                     if (messages[idx].MessageType == 'Sponsor') {
 
                         $('#sponsor-feed').append('<li class="feed-sponsor">' +
-                                         '<span class="name">' + messages[idx].Sender + '</span>' +
-                                         '<span class="body">' + messages[idx].Message + '</span>' +
-                                         '<time>' + messages[idx].Time + '</time>' +
-                                         '</li>');
+                            '<span class="name">' + messages[idx].Sender + '</span>' +
+                            '<span class="body">' + messages[idx].Message + '</span>' +
+                            '<time>' + messages[idx].Time + '</time>' +
+                            '</li>');
 
                     } else {
                         $('#sponsor-feed').append('<li>' +
