Fix cols for graph

--- a/TeamSauce/Views/Home/_Graphs.cshtml
+++ b/TeamSauce/Views/Home/_Graphs.cshtml
@@ -1,15 +1,17 @@
 ﻿@model dynamic
 
-<div class="span10">
-  <div class="canvas-wrapper">
-    <canvas id="that-big-graph" width="900" height="400"></canvas>
+<div class="row">
+  <div class="col-md-10">
+    <div class="canvas-wrapper">
+      <canvas id="that-big-graph" width="900" height="400"></canvas>
+    </div>
   </div>
-</div>
 
-<div class="span2">
-  <div class="graph-key">
-    <h3>Key</h3>
-    <ul></ul>
+  <div class="col-md-2">
+    <div class="graph-key">
+      <h3>Key</h3>
+      <ul></ul>
+    </div>
   </div>
 </div>
 
