--- a/TeamSauce/Views/Home/_Questionnaire.cshtml
+++ b/TeamSauce/Views/Home/_Questionnaire.cshtml
@@ -1,6 +1,6 @@
 ﻿@model dynamic
 
-<div class="modal fade" role="dialog" id="mymodal">
+<div class="modal fade" role="dialog" id="mymodal" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
