--- a/TeamSauce/Views/Home/Index.cshtml
+++ b/TeamSauce/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
 
         <link href="@Url.Content("/Content/bootstrap.min.css")" rel="stylesheet" />
         <link href="@Url.Content("/Content/site.css")" rel="stylesheet" />
+@*        <link href="@Url.Content("~/Content/jquery.pnotify.icons.css")" rel="stylesheet" />*@
         <script src="@Url.Content("~/Scripts/jquery-1.9.1.min.js")"></script>
         <script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
         <script src="@Url.Content("~/Scripts/jquery.signalR-2.0.0.js")"></script>
