Centre aligned some bitchin boxes.

--- a/TeamSauce/Views/Home/_loginArea.cshtml
+++ b/TeamSauce/Views/Home/_loginArea.cshtml
@@ -5,8 +5,8 @@
     <div class="row">
         <div class="col-md-12">
             <h2>Please sign in</h2>
-            <input id="username" type="text" class="form-control" placeholder="Username" autofocus="">
-            <input id="password" type="password" class="form-control" placeholder="Password">
+            <input id="username" type="text" class="form-control center-align" placeholder="Username" autofocus="">
+            <input id="password" type="password" class="form-control center-align" placeholder="Password">
             <button id="signin" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </div>
     </div>
