--- a/TeamSauce/Views/Home/_TeamChat.cshtml
+++ b/TeamSauce/Views/Home/_TeamChat.cshtml
@@ -8,4 +8,6 @@
 </div>
 <input type="submit" id="chat-submit" name="chat-submit" value="Send" class="btn btn-info btn-block" />
 
+<script src="@Url.Content("~/Scripts/jquery.caret.js")"></script>
+<script src="@Url.Content("~/Scripts/jquery.atwho.js")"></script>
 <script src="@Url.Content("~/Scripts/ChatR.js")"></script>
