Adds styling to message feeds.

--- a/TeamSauce/Views/Home/_SponsorChat.cshtml
+++ b/TeamSauce/Views/Home/_SponsorChat.cshtml
@@ -1,10 +1,9 @@
 ﻿@model dynamic
 
-<h2>SPONSOR</h2>
+<h2>SPONSOR CHAT</h2>
 
 <ul id="sponsor-feed" class="chatbox" style="overflow:scroll;min-height: 250px; max-height: 250px; overflow-x: hidden"></ul>
 <div class="chat-message-wrapper">
      <textarea id="sponsor-message" class="chat-message atwho"></textarea>
 </div>
 <input type="submit" id="send-sponsor-message" value="Send" class="btn btn-info btn-block" />
-<script src="~/Scripts/SponsorChatR.js"></script>
