--- a/TeamSauce/Content/site.css
+++ b/TeamSauce/Content/site.css
@@ -97,8 +97,12 @@
     color: black;
 }
 
+.feed-sponsor {
+    background-color: rgba(255, 128, 0, 0.2);
+}
+
 .feed-body-div {
-    margin-top: 15px;
+    margin-top: 20px;
 }
 
 .center-align {
