--- a/TeamSauce/Content/site.css
+++ b/TeamSauce/Content/site.css
@@ -1,8 +1,13 @@
 ﻿body {
-    
+
     background-image: -webkit-radial-gradient(50% 50%, circle, rgba(100%,100%,50%, 0.4) 20%, rgba(90%,60%,60%,0.4) 80%);
 
 }
+
+.navbar {
+    border-radius: 0 !important;
+}
+
 
 .angular-ratings { overflow: hidden; *zoom: 1; list-style: none; padding: 0; margin: 0; }
 .angular-ratings li { float: left; width: 20px; height: 20px; border-width: 0px; margin: 1px; text-indent: -500000em; background: #cccccc url(angular-rating.png) no-repeat; background-size: 100%; }
