--- a/TeamSauce/Views/Home/Index.cshtml
+++ b/TeamSauce/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
         <link href="@Url.Content("/Content/bootstrap.min.css")" rel="stylesheet" />
+        <link href="@Url.Content("/Content/jquery.atwho.css")" rel="stylesheet" />
         <script src="@Url.Content("~/Scripts/jquery-1.9.1.min.js")"></script>
         <script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
         <script src="@Url.Content("~/Scripts/jquery.signalR-2.0.0.js")"></script>
@@ -36,7 +37,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activity <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                             </ul>
-                            </li>                            
+                            </li>
                             <li><a id="signout" href="#">Log out</a></li>
                         </ul>
                     </div>
@@ -57,7 +58,7 @@
                     </div>
                 </div>
             </div>
-        
+
             @{ Html.RenderPartial("_Questionnaire"); }
         </div>
         <script src="@Url.Content("~/Scripts/jquery-1.9.1.min.js")"></script>
