--- a/TeamSauce/Views/Home/_TeamChat.cshtml
+++ b/TeamSauce/Views/Home/_TeamChat.cshtml
@@ -4,7 +4,7 @@
 
 <ul id="team-chatbox" class="chatbox" style="overflow:scroll; min-height: 250px; max-height: 250px; overflow-x: hidden"></ul>
 <div class="chat-message-wrapper">
-     <textarea class="chat-message atwho"></textarea>
+     <textarea id="team-message" class="chat-message atwho"></textarea>
 </div>
 <input type="submit" id="chat-submit" name="chat-submit" value="Send" class="btn btn-info btn-block" />
 
