Changes Team chat.

--- a/TeamSauce/Views/Home/_TeamChat.cshtml
+++ b/TeamSauce/Views/Home/_TeamChat.cshtml
@@ -1,6 +1,6 @@
 ﻿@model dynamic
 
-<h2>TEAM</h2>
+<h2>TEAM CHAT</h2>
 
 <ul id="team-chatbox" class="chatbox" style="overflow:scroll; min-height: 250px; max-height: 250px; overflow-x: hidden"></ul>
 <div class="chat-message-wrapper">
