Scrolls latest message at bottom.

--- a/TeamSauce/Views/Home/_SponsorChat.cshtml
+++ b/TeamSauce/Views/Home/_SponsorChat.cshtml
@@ -2,7 +2,9 @@
 
 <h2>SPONSOR CHAT</h2>
 
-<ul id="sponsor-feed" class="chatbox" style="overflow:scroll;min-height: 250px; max-height: 250px; overflow-x: hidden"></ul>
+<div id="sponsor-feed-holder" style="overflow:scroll;min-height: 250px; max-height: 250px; overflow-x: hidden">
+    <ul id="sponsor-feed" class="chatbox"></ul>
+</div>
 <div class="chat-message-wrapper">
      <textarea id="sponsor-message" class="chat-message atwho"></textarea>
 </div>
