Center aligned team chat and sponsor chat

--- a/TeamSauce/Views/Home/_SponsorChat.cshtml
+++ b/TeamSauce/Views/Home/_SponsorChat.cshtml
@@ -1,6 +1,6 @@
 ﻿@model dynamic
 
-<h2>SPONSOR CHAT</h2>
+<h2 class="center-align">SPONSOR CHAT</h2>
 
 <div id="sponsor-feed-holder" style="overflow:scroll;min-height: 250px; max-height: 250px; overflow-x: hidden">
     <ul id="sponsor-feed" class="chatbox"></ul>
