--- a/TeamSauce/Views/Home/_TeamChat2.cshtml
+++ b/TeamSauce/Views/Home/_TeamChat2.cshtml
@@ -1,6 +1,6 @@
 ﻿@model dynamic
 
-<h2>TEAM CHAT</h2>
+<h2 class="center-align">TEAM CHAT</h2>
 
 <div id="team-feed-holder" style="overflow:scroll;min-height: 250px; max-height: 250px; overflow-x: hidden">
     <ul id="team-feed" class="chatbox"></ul>
