--- a/TeamSauce/Views/Home/Index.cshtml
+++ b/TeamSauce/Views/Home/Index.cshtml
@@ -15,6 +15,8 @@
         <script src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
         <script src="@Url.Content("~/Scripts/jquery.signalR-2.0.0.js")"></script>
         <link href="@Url.Content("/Content/site.css")" rel="stylesheet" />
+        <link href="@Url.Content("/Content/jquery.pnotify.default.css")" rel="stylesheet" />
+        <link href="@Url.Content("/Content/jquery.pnotify.icons.css")" rel="stylesheet" />
 
     </head>
     <body>
@@ -71,5 +73,6 @@
         <script src="@Url.Content("~/Scripts/main-signalr.js")"></script>
         <script src="~/Scripts/jquery.atwho.js"></script>
         <script src="~/Scripts/jquery.caret.js"></script>
+        <script src="@Url.Content("~/Scripts/jquery.pnotify.js")"></script>
     </body>
 </html>
